fix dark mode in code console

--- a/src/styles/components/_rubric-menu.scss
+++ b/src/styles/components/_rubric-menu.scss
@@ -107,7 +107,7 @@
 
   &--dark {
     .ant-input-group-addon {
-      background-color: #323435;
+      background-color: #323435 !important;
     }
     input {
       background-color: #18191b;
